# csc10002-coursemgr

./: .gitignore  CMakeLists.txt  GitCommits.csv  README.md  main.cpp  testing
Components/: AcademicYear.cpp  AcademicYear.h  Class.cpp  Class.h  Components.cpp  Components.h  ConvertType.cpp  ConvertType.h  Course.cpp  Course.h  Date.cpp  Date.h  DisplayFunction.cpp  DisplayFunction.h  DownLoadFunction.cpp  DownLoadFunction.h  DownUpLoad.cpp  DownUpLoad.h  FileAndDirFunction.cpp  FileAndDirFunction.h  Function13-24.h  Functions1-12.h  ImportAndExportFunction.cpp  ImportAndExportFunction.h  InsertFunction.cpp  InsertFunction.h  Name.cpp  Name.h  RemoveFunction.cpp  RemoveFunction.h  SchoolYear.cpp  SchoolYear.h  Scoreboard.cpp  Scoreboard.h  SearchFunction.cpp  SearchFunction.h  Semester.cpp  Semester.h  SortFunction.cpp  SortFunction.h  (+10 more)
Data/: 22CLC06.txt  CSC10001_22CLC06.txt  CSC10001_22CLC06_OutputScore.csv  CSC10002_22CLC06_InputStud.csv  CourseStudentsList.csv  ExportStudentListInCourse.csv  FileFormat.csv  FileFormat.xlsx  HCMUS_2022.txt  LinkVideoDemoFormatData.txt  ListAcademicYear.txt  StaffList.csv  StaffList.txt  StudentList.csv
Data/AcademicYear/: ListAcademicYear.csv  ListAcademicYear.txt
Data/DemoFormatFile(unused)/: 2022_2023(AcademicYear).csv  22CLC06(Class).csv  HCMUS_2022.csv
Data/ExportData/: 21120045_Score.csv  21CLC01Score.csv  21CLC01_Score.csv  22CLC02.csv  AcademicYear_Export.csv  CSC10001_Score.csv  Class_ListScoreboard_Export.csv  Class_ListStudent_Export.csv  Class_Semester_ListScoreboard_Export.csv  HK1_2022_Export.csv  ListAcademicYear_Export.csv  Student_Semester_ListScoreboard_Export.csv  Test.csv  Test3.csv  TestClass.csv
Data/ImportData/: 21CLC01.csv  21CLC02.csv  CSC10002_22CLC06_ImportStudentList(Course).csv  CSC10002_Scoreboard.csv  CSC10121_Student.csv  MTH00005_Student.csv
Data/LoadedFile/: CSC10001_22CLC06(Course & Scoreboard).csv  StudentList.csv
Data/SchoolYear/: ListSchoolYear.csv  ListSchoolYear.txt
Graphics/: Application.cpp  Application.h  Button.cpp  Button.h  Constants.h  Graphics.cpp  Graphics.h  InputBox.cpp  InputBox.h  Menu.cpp  Menu.h  Scene.h  Scissor.cpp  Scissor.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  raygui.h
Headers/: Components.h  Course.h  Function13-24.h  Functions1-12.h  Graphics.h  Prototype.h  SchoolYear.h  Scoreboard.h  Semester.h  Structures.h  Student.h
InOutFile/: StudentInput.csv
Report/: Document_Components_Functions.md  Documentation.html  Documentation.md  Documentation_Components_Objects.md  Documentation_Graphics_Objects.md  Documentation_Graphics_Scene.md  GitCommits.csv  Report.html  Report.md  VideoLink.txt
SourceCode/: Components.cpp
Sources/: Components.cpp
Structures/: Node.h  Stack.h  Vector.h
(+174 files in other folders)
